--- a/public/css/home.css
+++ b/public/css/home.css
@@ -7,13 +7,15 @@ nav {
     display: flex;
     position: relative;
     height: 60px;
-    background-color: #dbace4;
+    background-color: whitesmoke;
 }
-
+.navbar-toggler{
+    margin-left: 1px;
+}
 nav h1 {
     position: absolute;
     top: 12px;
-    left: 30px;
+    left: 65px;
     font-size: 30px;
 }
 
@@ -22,28 +24,29 @@ nav ul {
     right: 20px;
     top: 20px;
 }
-
 nav ul a {
     text-decoration: none;
-    margin-left: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-top: 4px;
     color: black;
-    padding: 5px 9px;
+    padding: 4px 9px;
     background-color: rgba(255, 165, 0, .5);
     border-radius: 6px;
     font-size: 20px;
+    width: 100px;
 }
-
 nav ul a:hover {
     background-color: orange;
 }
 
-h2 {
+.title{
     text-align: center;
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
 section {
-    width: 50%;
+    width: 500px;
     border: 1px solid white;
     margin: 30px auto;
     text-align: center;
@@ -78,11 +81,13 @@ section {
     border-bottom: 1px solid gray;
     width: 300px;
 }
-
+.Passbox input{
+    position: relative;
+}
 .btn {
     padding: 7px 10px;
     font-size: 18px;
-    width: 450px;
+    width: 100px;
     background-color: orange;
     border: none;
     cursor: pointer;
@@ -90,25 +95,48 @@ section {
     margin-top: 25px;
 }
 
+.suggest{
+    color: white;
+    background-color: black;
+   border-radius: 10px;
+   margin-top: 1px;
+   z-index: 1;
+}
+
+.suggest p{
+    color: white;
+    cursor: pointer;
+    padding: 3px 5px;
+}
+.suggest:hover{
+    background-color: #555;
+}
 .viewbox{
 margin-top: 20px;
 }
 .viewcont {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     gap: 15px;
     grid-auto-flow: dense;
     margin: 1em auto;
     padding: 0;
     max-width: 100%;
     font-size: 18px;
+    
 }
 
+.viewcont p{
+    text-align: left;
+    width: 100%;
+    margin: auto;
+}
 .viewbox .view {
     border: 4px solid whitesmoke;
     padding: 7px 10px;
     border-radius: 6px;
     margin: 6px;
+    font-size: 18px;
     position: relative;
 }
 
@@ -132,8 +160,52 @@ margin-top: 20px;
 
 .view h5 p {
     margin-left: 5px;
+    cursor: pointer;
+    user-select: all;
+}
+.thispassword{
+    box-shadow: -4px -4px 10px rgba(255,255,255,1),inset 4px 4px 10px rgba(0,0,0,0.05),inset -4px -4px 10px rgba(255,255,255,1),inset 4px 4px 10px rgba(0,0,0,0.05) ;
+    outline: none;
+    /* border: 2px solid black; */
+    padding: 0px 8px;
+    border-radius: 6px;
+    position: relative;
+}
+.inthis{
+    box-shadow: -4px -4px 10px rgba(255,255,255,1),inset 4px 4px 10px rgba(0,0,0,0.05),inset -4px -4px 10px rgba(255,255,255,1),inset 4px 4px 10px rgba(0,0,0,0.05) ;
+    outline: none;
+}
+.value{
+    display: none;
+}
+.show{
+    box-shadow: -4px -4px 10px rgba(255,255,255,1),inset 4px 4px 10px rgba(0,0,0,0.05),inset -4px -4px 10px rgba(255,255,255,1),inset 4px 4px 10px rgba(0,0,0,0.05) ;
+    outline: none;
+    display: block;
 }
 
+.inthis input{
+    border: none;
+}
+.takein span{
+    color: green;
+    font-weight: 500;
+}
+
+.inthis i {
+    position: absolute;
+    /* right: 3px; */
+    margin: 3px;
+}
+.fa-eye{
+    right: 6px;
+}
+.fa-eye-slash{
+    right: 6px;
+}
+.fa-clone{
+    right: 35px;
+}
 .msg {
     text-align: center;
     margin-left: 284%;
@@ -141,3 +213,71 @@ margin-top: 20px;
     margin-right: 284%;
     width: 400px;
 }
+.ibox{
+    margin-top: -9px;
+}
+.tbox{
+    margin-top: -3px;
+}
+.searchbox{
+    margin-right: 10px;
+    height: 40px;
+    position:absolute;
+    right: 10px;
+    margin-top: 0px;
+}
+.searchbox .btn{
+    width: 70px;
+}
+.menu{
+    position:absolute;
+    /* width: 50%; */
+    right: 20rem;
+    padding: 5px 7px;
+    margin-top: -2px;
+}
+.homemenu{
+    margin: -7px -10px 0px;
+}
+.homemenu a{
+    margin: 10px;
+    text-decoration: none;
+    width: 70px;
+    color: black;
+}
+body {
+    margin:0px;
+    font-family:"Open Sans",sans-serif;
+  }
+
+  /* for context */
+  #context-menu {
+    position:fixed;
+    z-index:10000;
+    width:150px;
+    background:#1b1a1a;
+    border-radius:5px;
+    transform:scale(0);
+    transform-origin:top left;
+  }
+  #context-menu.active {
+    transform:scale(1);
+    transition:transform 300ms ease-in-out;
+  }
+  #context-menu .item {
+    padding:8px 10px;
+    font-size:15px;
+    color:#eee;
+  }
+  #context-menu .item:hover {
+    background:#555;
+  }
+  #context-menu .item i {
+    display:inline-block;
+    margin-right:5px;
+  }
+  #context-menu hr {
+    margin:2px 0px;
+    border-color:#555;
+  }
+                    
